--- a/LinkedInUI/app/src/main/res/values/strings.xml
+++ b/LinkedInUI/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_notifications">Notifications</string>
 
     <string name="login_title">Welcome Back</string>
-    <string name="username_hint">Email or Username</string>
+    <string name="username_hint">Your Full Name</string>
     <string name="password_hint">Password</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="login_button_text">Log In</string>
@@ -14,7 +14,7 @@
     <string name="login_error_invalid_credentials">Invalid username or password.</string>
     <string name="login_error_network">Network error. Please try again later.</string>
 
-    <string name="signup_title">Create Your Profile</string>
+    <string name="signup_title">Welcome to AP-LinkedIn!</string>
     <string name="first_name_hint">First Name</string>
     <string name="last_name_hint">Last Name</string>
     <string name="email_hint">Email Address</string>
@@ -52,5 +52,8 @@
     <string name="server_ip_hint">server IP address</string>
     <string name="submit_button_text">submit</string>
     <string name="enter_server_ip_text">Enter Server IP below:</string>
+    <string name="invalid_email">Invalid Email</string>
+    <string name="invalid_password">Invalid Password format</string>
+    <string name="invalid_username">Invalid Username</string>
 
 </resources>
