--- a/LinkedInUI/app/src/main/res/values/strings.xml
+++ b/LinkedInUI/app/src/main/res/values/strings.xml
@@ -54,11 +54,38 @@
     <string name="server_ip_hint">server IP address</string>
     <string name="submit_button_text">submit</string>
     <string name="enter_server_ip_text">Enter Server IP below:</string>
-    <string name="invalid_email">Invalid Email</string>
     <string name="invalid_password">Invalid Password format</string>
     <string name="invalid_username">Invalid Username</string>
     <string name="email_exist">This email is already registered</string>
     <string name="username_exist">This username is already registered</string>
     <string name="internal_error">Internal server error, please try again</string>
-
+    <string name="additional_name_hint">Additional Name</string>
+    <string name="enter_info_text">Please enter your information:</string>
+    <string name="city_hint">City</string>
+    <string name="country_hint">Country</string>
+    <string name="profession_hint">Profession</string>
+    <string name="education_info">Education Information:</string>
+    <string name="institute_name_hint">Institute Name</string>
+    <string name="major_hint">Major</string>
+    <string name="education_start_date_hint">Education Start Date</string>
+    <string name="education_end_date_hint">Education End Date</string>
+    <string name="gpa_hint">GPA</string>
+    <string name="activities_description_hint">Description of Activities</string>
+    <string name="description_hint">Description</string>
+    <string name="fill_all_fields">Please fill in all fields</string>
+    <string name="invalid_name">Invalid first name</string>
+    <string name="invalid_last_name">Invalid last name</string>
+    <string name="invalid_additional_name">Invalid additional name</string>
+    <string name="invalid_email">Invalid email</string>
+    <string name="invalid_city">Invalid city</string>
+    <string name="invalid_country">Invalid country</string>
+    <string name="invalid_profession">Invalid profession</string>
+    <string name="invalid_institute_name">Invalid institute name</string>
+    <string name="invalid_major">Invalid major</string>
+    <string name="invalid_education_start_date">Invalid education start date</string>
+    <string name="invalid_education_end_date">Invalid education end date</string>
+    <string name="invalid_gpa">Invalid GPA</string>
+    <string name="invalid_activities_description">Invalid description of activities</string>
+    <string name="invalid_description">Invalid description</string>
+    <string name="profile_saved">Profile saved successfully</string>
 </resources>
