--- a/LinkedInUI/app/src/main/res/values/strings.xml
+++ b/LinkedInUI/app/src/main/res/values/strings.xml
@@ -1,94 +1,95 @@
 <resources>
-    <string name="app_name">لینکدین پروژه</string>
-    <string name="title_home">خانه</string>
-    <string name="title_dashboard">داشبورد</string>
-    <string name="title_notifications">اعلان‌ها</string>
+    <string name="app_name">AP LinkedIn</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 
 
-    <string name="login_title">خوش آمدید</string>
-    <string name="username_hint">نام کاربری</string>
-    <string name="password_hint">رمز عبور</string>
-    <string name="forgot_password">رمز عبور خود را فراموش کرده‌اید؟</string>
-    <string name="login_button_text">ورود</string>
-    <string name="no_account_text">حساب کاربری ندارید؟</string>
-    <string name="sign_up_button_text">ثبت نام</string>
-    <string name="login_error_invalid_credentials">نام کاربری یا رمز عبور نامعتبر است.</string>
-    <string name="login_error_network">خطا در شبکه. لطفاً بعداً دوباره امتحان کنید.</string>
-    <string name="login_success">با موفقیت وارد شدید</string>
-    <string name="invalid_credentials">ایمیل یا رمز عبور نامعتبر است</string>
+    <string name="login_title">Welcome Back</string>
+    <string name="username_hint">Username</string>
+    <string name="password_hint">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="login_button_text">Log In</string>
+    <string name="no_account_text">Don\'t have an account?</string>
+    <string name="sign_up_button_text">Sign Up</string>
+    <string name="login_error_invalid_credentials">Invalid username or password.</string>
+    <string name="login_error_network">Network error. Please try again later.</string>
+    <string name="login_success">Logged in successfully</string>
+    <string name="login_safeLoginError">Please enter valid credentials.</string>
+    <string name="invalid_credentials">Invalid email or password</string>
 
-    <string name="signup_title">به لینکداین پروژه خوش آمدید</string>
-    <string name="first_name_hint">نام</string>
-    <string name="last_name_hint">نام خانوادگی</string>
-    <string name="email_hint">آدرس ایمیل</string>
-    <string name="confirm_email_hint">تأیید آدرس ایمیل</string>
-    <string name="password_create_hint">ایجاد رمز عبور</string>
-    <string name="confirm_password_hint">تأیید رمز عبور</string>
-    <string name="signup_button_text">ثبت نام</string>
-    <string name="signup_error_empty_field">لطفاً تمام فیلدها را پر کنید.</string>
-    <string name="signup_error_password_mismatch">رمز عبورها هم‌خوانی ندارند.</string>
-    <string name="signup_error_email_invalid">لطفاً یک آدرس ایمیل معتبر وارد کنید.</string>
-    <string name="signup_success_message">حساب کاربری شما ایجاد شد! لطفاً ایمیل خود را برای تأیید بررسی کنید.</string>
+    <string name="signup_title">Welcome to AP-LinkedIn!</string>
+    <string name="first_name_hint">First Name</string>
+    <string name="last_name_hint">Last Name</string>
+    <string name="email_hint">Email Address</string>
+    <string name="confirm_email_hint">Confirm Email Address</string>
+    <string name="password_create_hint">Create Password</string>
+    <string name="confirm_password_hint">Confirm Password</string>
+    <string name="signup_button_text">Sign Up</string>
+    <string name="signup_error_empty_field">Please fill in all fields.</string>
+    <string name="signup_error_password_mismatch">Passwords do not match.</string>
+    <string name="signup_error_email_invalid">Please enter a valid email address.</string>
+    <string name="signup_success_message">Your account has been created! Please check your email for verification.</string>
 
-    <string name="profile_title">پروفایل من</string>
-    <string name="edit_profile_button_text">ویرایش پروفایل</string>
-    <string name="connections_title">ارتباطات</string>
-    <string name="no_connections_text">شما هنوز هیچ ارتباطی ندارید. شبکه خود را شروع کنید!</string>
-    <string name="posts_title">پست‌ها</string>
-    <string name="no_posts_text">شما هنوز هیچ پستی ایجاد نکرده‌اید. تجربیات و افکار خود را به اشتراک بگذارید!</string>
+    <string name="profile_title">My Profile</string>
+    <string name="edit_profile_button_text">Edit Profile</string>
+    <string name="connections_title">Connections</string>
+    <string name="no_connections_text">You don\'t have any connections yet. Start building your network!</string>
+    <string name="posts_title">Posts</string>
+    <string name="no_posts_text">You haven\'t created any posts yet. Share your thoughts and experiences!</string>
 
-    <string name="home_button_text">خانه</string>
-    <string name="search_button_text">جستجو</string>
-    <string name="notifications_button_text">اعلان‌ها</string>
-    <string name="inbox_button_text">پیام‌ها</string>
-    <string name="more_button_text">بیشتر</string>
+    <string name="home_button_text">Home</string>
+    <string name="search_button_text">Search</string>
+    <string name="notifications_button_text">Notifications</string>
+    <string name="inbox_button_text">Messages</string>
+    <string name="more_button_text">More</string>
 
-    <string name="create_post_title">ساخت پست</string>
-    <string name="write_something_hint">درباره چه چیزی فکر می‌کنید؟</string>
-    <string name="post_button_text">ارسال</string>
+    <string name="create_post_title">Create a Post</string>
+    <string name="write_something_hint">What\'s on your mind?</string>
+    <string name="post_button_text">Post</string>
 
-    <string name="search_hint">جستجو برای افراد، شغل‌ها یا شرکت‌ها</string>
+    <string name="search_hint">Search for people, jobs, or companies</string>
 
-    <string name="error_generic">خطایی رخ داده است. لطفاً دوباره امتحان کنید.</string>
-    <string name="ok_button_text">تأیید</string>
-    <string name="cancel_button_text">لغو</string>
-    <string name="server_ip_hint">آدرس آیپی سرور</string>
-    <string name="submit_button_text">ثبت</string>
-    <string name="enter_server_ip_text">آدرس آیپی سرور را وارد کنید:</string>
-    <string name="invalid_password">فرمت رمز عبور نامعتبر است</string>
-    <string name="invalid_username">نام کاربری نامعتبر است</string>
-    <string name="email_exist">این ایمیل قبلاً ثبت شده است</string>
-    <string name="username_exist">این نام کاربری قبلاً ثبت شده است</string>
-    <string name="internal_error">خطای داخلی سرور، لطفاً دوباره امتحان کنید</string>
-    <string name="additional_name_hint">نام اضافی</string>
-    <string name="enter_info_text">لطفاً اطلاعات خود را وارد کنید:</string>
-    <string name="city_hint">شهر</string>
-    <string name="country_hint">کشور</string>
-    <string name="profession_hint">حرفه</string>
-    <string name="education_info">اطلاعات تحصیلی:</string>
-    <string name="institute_name_hint">نام موسسه</string>
-    <string name="major_hint">رشته تحصیلی</string>
-    <string name="education_start_date_hint">تاریخ شروع تحصیل</string>
-    <string name="education_end_date_hint">تاریخ پایان تحصیل</string>
-    <string name="gpa_hint">معدل</string>
-    <string name="activities_description_hint">توضیحات فعالیت‌ها</string>
-    <string name="description_hint">توضیحات</string>
-    <string name="fill_all_fields">لطفاً تمام فیلدها را پر کنید</string>
-    <string name="invalid_name">نام نامعتبر است</string>
-    <string name="invalid_last_name">نام خانوادگی نامعتبر است</string>
-    <string name="invalid_additional_name">نام اضافی نامعتبر است</string>
-    <string name="invalid_email">ایمیل نامعتبر است</string>
-    <string name="invalid_city">شهر نامعتبر است</string>
-    <string name="invalid_country">کشور نامعتبر است</string>
-    <string name="invalid_profession">حرفه نامعتبر است</string>
-    <string name="invalid_institute_name">نام موسسه نامعتبر است</string>
-    <string name="invalid_major">رشته تحصیلی نامعتبر است</string>
-    <string name="invalid_education_start_date">تاریخ شروع تحصیل نامعتبر است</string>
-    <string name="invalid_education_end_date">تاریخ پایان تحصیل نامعتبر است</string>
-    <string name="invalid_gpa">معدل نامعتبر است</string>
-    <string name="invalid_activities_description">توضیحات فعالیت‌ها نامعتبر است</string>
-    <string name="invalid_description">توضیحات نامعتبر است</string>
-    <string name="profile_saved">پروفایل با موفقیت ذخیره شد</string>
+    <string name="error_generic">An error occurred. Please try again.</string>
+    <string name="ok_button_text">OK</string>
+    <string name="cancel_button_text">Cancel</string>
+    <string name="server_ip_hint">server IP address</string>
+    <string name="submit_button_text">submit</string>
+    <string name="enter_server_ip_text">Enter Server IP below:</string>
+    <string name="invalid_password">Invalid Password format</string>
+    <string name="invalid_username">Invalid Username</string>
+    <string name="email_exist">This email is already registered</string>
+    <string name="username_exist">This username is already registered</string>
+    <string name="internal_error">Internal server error, please try again</string>
+    <string name="additional_name_hint">Additional Name</string>
+    <string name="enter_info_text">Please enter your information:</string>
+    <string name="city_hint">City</string>
+    <string name="country_hint">Country</string>
+    <string name="profession_hint">Profession</string>
+    <string name="education_info">Education Information:</string>
+    <string name="institute_name_hint">Institute Name</string>
+    <string name="major_hint">Major</string>
+    <string name="education_start_date_hint">Education Start Date</string>
+    <string name="education_end_date_hint">Education End Date</string>
+    <string name="gpa_hint">GPA</string>
+    <string name="activities_description_hint">Description of Activities</string>
+    <string name="description_hint">Description</string>
+    <string name="fill_all_fields">Please fill in all fields</string>
+    <string name="invalid_name">Invalid first name</string>
+    <string name="invalid_last_name">Invalid last name</string>
+    <string name="invalid_additional_name">Invalid additional name</string>
+    <string name="invalid_email">Invalid email</string>
+    <string name="invalid_city">Invalid city</string>
+    <string name="invalid_country">Invalid country</string>
+    <string name="invalid_profession">Invalid profession</string>
+    <string name="invalid_institute_name">Invalid institute name</string>
+    <string name="invalid_major">Invalid major</string>
+    <string name="invalid_education_start_date">Invalid education start date</string>
+    <string name="invalid_education_end_date">Invalid education end date</string>
+    <string name="invalid_gpa">Invalid GPA</string>
+    <string name="invalid_activities_description">Invalid description of activities</string>
+    <string name="invalid_description">Invalid description</string>
+    <string name="profile_saved">Profile saved successfully</string>
 
     <string name="country">Country</string>
     <string name="bio">A Geek.</string>
@@ -103,4 +104,5 @@
     <string name="contact_info">Contact info</string>
     <string name="job_status">Job status</string>
     <string name="social_media">Social Media</string>
+    <string name="hintEmail">example@example.com</string>
 </resources>
